navigation menu showing text correctly. hamburger slides off screen when scrolling currenlty

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,132 +44,222 @@
 
 
 /* General styles */
-
-/* endable this to add smooth scrolling */
-/* html {
-    scroll-behavior: smooth;
-} */
-
-li, a, button{
-    font-size: var(--fs-body);
-    font-weight: var(--fw-bold);
-    color: var(--clr-dark);
-    text-decoration: none;
-}
-html{
-    scroll-behavior:smooth;
-}
-
-
-body {
-    background: var(--clr-light);
-    color: var(--clr-dark);
-    margin: 0;
-    font-family: var(--ff-primary);
-    font-size: var(--fs-body);
-    line-height: 1.6;
-}
-
-section {
-    padding: 5em 2em;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-}
-
-/* Typography */
-h1, h2, h3 {
-    line-height: 1;
-    margin: 0;
-}
-
-h1 { font-size: var(--fs-h1) }
-h2 { font-size: var(--fs-h2) }
-h3 { font-size: var(--fs-h3) }
-
-.section__title {
-    margin-bottom: .25em;
-}
-
-
-/* Navigation  */
-.nav-menu {
-    display: none;
-}
-.nav-toggle {
-    display: none;
-}
-.logo{
-    height:40px;
-    cursor: pointer;
-}
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    padding: 0em 0.5em;
-}
-
-.nav-bar__links{
-    list-style: none;
-}
-
-.nav-bar__links li{
-    display: inline-block;
-    padding: 0px 1em;
-}
-
-.nav-bar__links li a {
-    transition: var(--hover-transition);
-}
-.nav-bar__links li a:hover{
-    color: var(--clr-accent);
-}
-
-button {
-    padding: 1em;
-    background-color: var(--clr-light);
-    transition: var(--hover-transition);
-}
-button:hover{
-    color: var(--clr-light);
-    background-color: var(--clr-dark);
-}
-
-@media (max-width: 700px){
-    .nav-bar{
-        display:none;
+    /* endable this to add smooth scrolling */
+    html {
+        scroll-behavior: smooth;
     }
-    .nav-toggle{
-        display: inline-block;
+
+    li, a, button{
+        font-size: var(--fs-body);
+        font-weight: var(--fw-bold);
+        text-decoration: none;
     }
-}
+
+    button {
+        padding: 1em;
+        background-color: var(--clr-light);
+        transition: var(--hover-transition);
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+    }
+    button:hover{
+        color: var(--clr-light);
+        background-color: var(--clr-accent);
+    }
+    html{
+        scroll-behavior:smooth;
+    }
+
+
+    body {
+        background: var(--clr-light);
+        color: var(--clr-dark);
+        margin: 0;
+        font-family: var(--ff-primary);
+        font-size: var(--fs-body);
+        line-height: 1.6;
+    }
+
+    section {
+        padding: 5em 2em;
+    }
 
 
 
+/* ----- Typography ----- */
+    h1, h2, h3 {
+        line-height: 1;
+        margin: 0;
+    }
+
+    h1 { font-size: var(--fs-h1) }
+    h2 { font-size: var(--fs-h2) }
+    h3 { font-size: var(--fs-h3) }
+
+    .section__title {
+        margin-bottom: .25em;
+    }
 
 
 
-/* welcome section */
-.welcome{
-    background-color: var(--clr-dark);
-    color: var(--clr-light);
-    text-align: center
+/* ----- Navigation ----- */
+    .nav-menu {
+        display: none;
+    }
+    .nav-bar__links,
+    .nav-menu__links{
+        list-style-type: none;
+    }
+    .nav__link a{
+        text-decoration: none;
+    }
+    .logo{
+        left: 1em;
+        height: 3em;
+        cursor: pointer;
+        padding: 0.5em;
+    }
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items:center;
+        padding: 0em 0.5em;
+    }
+    /* Navigation: bar links */
+        .nav-bar__link {
+            display: inline-block;
+            padding: 0px 1em;
+        }
+
+        .nav-bar__link a, 
+        .nav-bar__button{
+            transition: var(--hover-transition);
+            color: var(--clr-dark);
+        }
+        .nav-bar__link :hover{
+            color: var(--clr-accent);
+        }
+        
+
+    /* Navigation: menu links */
+        .nav-menu{
+            position: fixed;
+            background: var(--clr-dark);
+            color: var(--clr-light);
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 100;
+            
+            transform: translateX(110%);
+            transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+        }
+        .nav-menu__links{
+           text-align: center;
+        }
+        .nav-menu__link a{
+            font-size: var(--fs-h1);
+            color: var(--clr-light);
+        }
+    /* Navigation: hamburger */
+        .nav-toggle {
+            display: none;
+            padding: 0.25em;
+            background: transparent;
+            border: 0;
+            right: 1em;
+            top: 1em;
+            z-index: 1000;
+        }
+        .nav-toggle:hover{
+            background-color: var(--clr-light);
+        }
+        .hamburger {
+            display: block;
+            position: relative;
+        }
+
+        .hamburger,
+        .hamburger::before,
+        .hamburger::after {
+            background: var(--clr-dark);
+            width: 2em;
+            height: 3px;
+            border-radius: 1em;
+            transition: transform 250ms ease-in-out;
+        }
+        .hamburger::before,
+        .hamburger::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+        }
+
+        .hamburger::before{
+            top: 6px;
+        }
+        
+        .hamburger::after{
+            bottom: 6px;
+        }
+
+    /* Navigation: media */
+        @media (max-width: 700px){
+            .nav-bar{
+                display:none;
+            }
+            .nav-menu{
+                display: block;
+            }
+            .nav-toggle{
+                display: inline-block;
+            }
+            .hamburger{
+                position:fixed;
+                right: 1em
+            }
+            /* .hamburger,
+            .hamburger::before,
+            .hamburger::after {
+                background: var(--clr-light);
+            } */
+        }
     
-}
-/* .welcome{
-    background-color: var(--clr-dark);
-    
-    background-image: url(../img/Responsive_web_design.jpg);
-    background-size: cover;
-    color: var(--clr-light);
-    text-align: center;
-} */
 
 
-/* my work */
-.my-work{
-    background-color: var(--clr-accent);
-}
+
+/* ------ Welcome Section -------*/
+    .welcome{
+        background-color: var(--clr-dark);
+        color: var(--clr-light);
+        text-align: center
+        
+    }
+
+
+
+
+/* ----- About Section ----- */
+    .about__profileImg{
+        display: block;
+        max-width: 100%;
+    }
+
+
+
+/*  ----- My Services Section ----- */
+    /* TODO */
+
+
+
+/* ----- My work Section ----- */
+    .my-work{
+        background-color: var(--clr-accent);
+    }
+
+
+/* ----- Contact Section ----- */
+    /* TODO */
